# mergai

./: .pre-commit-config.yaml  .psmdb.yaml  README.md  TODO.md  pyproject.toml
.github/workflows/: deps-check.yml  format-check.yml  lint.yml  security.yml
src/mergai/: agent_executor.py  app.py  config.py  context_builder.py  git_utils.py  main.py  models.py  prompt_builder.py  prompts.py  state_store.py  util.py  version.py
src/mergai/agents/: base.py  error.py  factory.py  gemini_cli.py  opencode.py
src/mergai/commands/: branch.py  commit.py  config_cmd.py  conflict_context.py  context.py  describe.py  finalize.py  fork.py  merge.py  notes.py  pr.py  pull_request.py  replay.py  repo.py  resolve.py  util.py  utils.py
src/mergai/merge_pick_strategies/: __init__.py  base.py  branching_point.py  conflict.py  huge_commit.py  important_files.py  most_recent.py  registry.py
src/mergai/prompts/: __init__.py  conflict_context.md  merge_context.md  pr_comments.md  system_prompt.md  system_prompt_describe.md  system_prompt_resolve.md  user_comment.md
src/mergai/strategies/: __init__.py  base.py  branching_point.py  conflict.py  huge_commit.py  important_files.py  registry.py
src/mergai/templates/: __init__.py
src/mergai/templates/markdown/: commit_summary.jinja2  conflict_context.jinja2  merge_context.jinja2  merge_description.jinja2  merge_info.jinja2  pr_comments.jinja2  solution.jinja2  solution_pr.jinja2  solutions.jinja2  user_comment.jinja2
src/mergai/templates/text/: commit_summary.jinja2  conflict_context.jinja2  merge_context.jinja2  merge_description.jinja2  merge_info.jinja2  pr_comments.jinja2  solution.jinja2  solutions.jinja2  user_comment.jinja2
src/mergai/utils/: __init__.py  branch_name_builder.py  formatters.py  git_utils.py  output.py  pr_title_builder.py  state_store.py  templates.py  util.py
