[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mergai"
dynamic = ["version"]
dependencies = [
    "click==8.3.1",
    "pyaml==25.7.0",
    "jinja2==3.1.6",
    "GitPython==3.1.45",
    "langchain==1.1.0",
    "langchain_google_genai==3.2.0",
    "python-dotenv==1.2.1",
    "tiktoken==0.7.0",
    "rich==14.2.0",
    "pygithub==2.8.1",
    "simpleeval==1.0.3",
]

[project.scripts]
mergai = "mergai.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mergai" = ["prompts/*.md", "templates/**/*.jinja2"]

[tool.setuptools_scm]
# Version derived from git tags (e.g., v0.1.0 -> 0.1.0)
# Development versions: 0.1.0.dev5+g1234abc (5 commits after tag)
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"