[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mergai"
dynamic = ["version"]
dependencies = [
    "click==8.3.1",
    "PyYAML>=6.0.0",
    "jinja2==3.1.6",
    "GitPython==3.1.45",
    "python-dotenv==1.2.1",
    "rich==14.2.0",
    "pygithub==2.8.1",
    "simpleeval==1.0.3",
]

[project.scripts]
mergai = "mergai.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mergai" = ["prompts/*.md", "templates/**/*.jinja2"]

[tool.setuptools_scm]
# Version derived from git tags (e.g., v0.1.0 -> 0.1.0)
# Development versions: 0.1.0.dev5+g1234abc (5 commits after tag)
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0.0",
    "pip-audit>=2.7.0",
    "deptry>=0.12.0",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.venv
    | venv
    | __pycache__
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["mergai"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
]

[tool.deptry]
# Ignore dev tools that are CLI-based and not imported in code
[tool.deptry.per_rule_ignores]
DEP002 = ["pre-commit", "ruff", "mypy", "types-PyYAML", "pip-audit", "deptry"]